@@ -356,6 +356,7 @@ because of Phabricator reports.
 * Content::getSecondaryDataUpdates(), was removed. Use
   ContentHandler::getSecondaryDataUpdates() instead.
 * wfDiff(), deprecated since 1.25, has been removed.
+* Language::$mLangObjCache, deprecated since 1.35, was removed.
 * …
 
 === Deprecations in 1.37 ===
